k8s/manifests/forgejo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: apps
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
